[package]
name = "async-chat-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
mio = { version = "1.0.2", features = ["net", "os-ext", "os-poll"] }
clap = { version = "4.0", features = ["derive"] }


[lints]
workspace = true
